--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
   <meta charset="UTF-8">
   <title>Navigation test for smart TVs</title>
   <link rel="stylesheet" href="style.css"/>
+  <script src="platforms.js"></script>
 </head>
 <body>
 <div class="menu" data-nav-right=".content">
-  <button>Opción 1</button>
-  <button>Opción 2</button>
-  <button>Opción 3</button>
+  <a href="#" class="option">Opción 1</a>
+  <a href="#" class="option">Opción 2</a>
+  <a href="#" class="option">Opción 3</a>
 </div>
 <div class="content" data-nav-left=".menu">
-  <button class="item">Item 1</button>
-  <button class="item">Item 2</button>
-  <button class="item">Item 3</button>
-  <button class="item">Item 4</button>
+  <a href="#" class="item">Item 1</a>
+  <a href="#" class="item">Item 2</a>
+  <a href="#" class="item">Item 3</a>
+  <a href="#" class="item">Item 4</a>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script src="code.js"></script>
